welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: not found: value x
    x=getMondeHauteur()-1-x
    ^